--- a/src/app/cardapio/cardapio.page.scss
+++ b/src/app/cardapio/cardapio.page.scss
@@ -10,22 +10,16 @@ body {
 
 .header-container {
   position: relative;
-  height: 200px;
-}
-
-.blurred-background {
-  position: absolute;
+  min-height: 200px;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background-image: url('../../assets/imagens/fundo-arvores-removebg-preview.png');
   background-repeat: repeat-x;
-  background-size: cover;
   background-position: center bottom;
-  filter: blur(4px);
-  z-index: 1;
 }
+
 
 .CardapioHeader {
   position: absolute;
@@ -76,7 +70,6 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 16px;
 }
 
 .top-icons ion-icon {
@@ -96,7 +89,6 @@ body {
 .contentCardapio {
   max-width: 900px;
   margin: 40px auto;
-  padding: 0 20px;
 }
 
 .inicioCardapio {
@@ -144,7 +136,7 @@ body {
 
 .blocoInfosPreco {
   color: #555555;
-  font-size: 38px;
+  font-size: 28px;
   font-weight: 700;
   text-align: right;
   white-space: nowrap;
@@ -157,6 +149,29 @@ body {
 .blocoInfos:hover .blocoInfosPreco {
   color: #222222;
 }
+
+
+.contentBg {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: fixed;
+    overflow-y: auto;
+    float: left;
+    max-height: 450px;
+}
+
+.content {
+    max-width: 700px;
+    width: 100%;
+}
+
+
+
+
+
 
 /* Responsividade */
 @media (max-width: 1024px) {
@@ -191,6 +206,12 @@ body {
     text-align: left;
     font-size: 30px;
     margin-top: 12px;
+  }
+}
+
+@media (max-width: 600px) {
+  .content {
+    max-width: 900px;
   }
 }
 
