--- a/src/app/pedido-prestador/pedido-prestador.page.html
+++ b/src/app/pedido-prestador/pedido-prestador.page.html
@@ -56,7 +56,7 @@
                   <p class="p-btn-links">Chat</p>
               </ion-col>
           
-              <ion-col  (click)="cliqueMaps(solicitacao.address.logradouro, solicitacao.address.unidade)"> 
+              <ion-col  (click)="cliqueMaps(solicitacao.address.cep, solicitacao.address.logradouro, solicitacao.address.unidade)"> 
                   <ion-button shape="round" class="btn-links">
                     <ion-icon name="map-outline" class="icones-btn-links"></ion-icon>
                   </ion-button>
