--- a/src/app/pedido-cliente/pedido-cliente.page.html
+++ b/src/app/pedido-cliente/pedido-cliente.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <app-toolbar-global [titulo]="'pedido'"></app-toolbar-global>
+    <app-toolbar-global [titulo]="'Pedido'"></app-toolbar-global>
   </ion-toolbar>
 </ion-header>
 
