--- a/src/app/dados-da-conta/dados-da-conta.page.scss
+++ b/src/app/dados-da-conta/dados-da-conta.page.scss
@@ -158,6 +158,31 @@ ion-content {
   background-color: #e1e6f0;
 }
 
+
+.contentBg {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: fixed;
+    overflow-y: auto;
+    float: left;
+    max-height: 450px;
+}
+
+.content {
+    max-width: 700px;
+    width: 100%;
+}
+
+@media (max-width: 600px) {
+  .content {
+    max-width: 900px;
+  }
+}
+
+
 /* Responsividade */
 @media (max-width: 480px) {
   .card-cinza {
