--- a/src/app/enderecos/enderecos.page.scss
+++ b/src/app/enderecos/enderecos.page.scss
@@ -106,6 +106,32 @@ ion-item.msg-vazia {
   padding: 28px 0;
 }
 
+
+
+.contentBg {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: fixed;
+    overflow-y: auto;
+    float: left;
+    max-height: 450px;
+}
+
+.content {
+    max-width: 700px;
+    width: 100%;
+}
+
+@media (max-width: 600px) {
+  .content {
+    max-width: 900px;
+  }
+}
+
+
 /* Responsividade */
 @media (max-width: 480px) {
   ion-item {
