--- a/src/app/perfil-cliente/perfil-cliente.page.html
+++ b/src/app/perfil-cliente/perfil-cliente.page.html
@@ -5,74 +5,79 @@
 </ion-header>
 <ion-content class="no-scroll">
 
-    <div class="linha-separadora-topo"></div>
+  <div class="contentBg">
+    <div class="content">
+      <div class="linha-separadora-topo"></div>
 
-    <div class="perfil-info-container">
-      <ion-avatar class="perfil-avatar">
-        <img src="../../assets/imagens/fotoPerfil/fotoPerfilTrabalhador.png">
-      </ion-avatar>
-      <ion-label class="nome-cliente-label">
-        <strong>{{this.currentUser?.name}}</strong>
-      </ion-label>
-    </div>
-
-    <div class="card-cinza">
-      <ion-item lines="none" routerLink="#">
-        <ion-icon name="chatbubble-outline" slot="start"></ion-icon>
-        <ion-label>
-          <h2>Conversas</h2>
-          <p>Meu histórico de conversas</p>
+      <div class="perfil-info-container">
+        <ion-avatar class="perfil-avatar">
+          <img src="../../assets/imagens/fotoPerfil/fotoPerfilTrabalhador.png">
+        </ion-avatar>
+        <ion-label class="nome-cliente-label">
+          <strong>{{this.currentUser?.name}}</strong>
         </ion-label>
-      </ion-item>
-    </div>
+      </div>
 
-    <div class="card-cinza">
-      <ion-item lines="none" routerLink="#">
-        <ion-icon name="notifications-outline" slot="start"></ion-icon>
-        <ion-label (click)="abrirNotificacoes()" >
-          <h2>Notificações</h2>
-          <p>Minha central de notificações</p>
-        </ion-label>
-      </ion-item>
-    </div>
+      <div class="card-cinza">
+        <ion-item lines="none" (click)="cliqueFuncaoDesabilitada()">
+          <ion-icon name="chatbubble-outline" slot="start"></ion-icon>
+          <ion-label>
+            <h2>Conversas</h2>
+            <p>Meu histórico de conversas</p>
+          </ion-label>
+        </ion-item>
+      </div>
 
-    <div class="card-cinza">
-      <ion-item lines="none" routerLink="#">
-        <ion-icon name="person-outline" slot="start"></ion-icon>
-        <ion-label (click)="abrirDadosConta()">
-          <h2>Dados da conta</h2>
-          <p>Minhas informações da conta</p>
-        </ion-label>
-      </ion-item>
-    </div>
+      <div class="card-cinza">
+        <ion-item lines="none" routerLink="#">
+          <ion-icon name="notifications-outline" slot="start"></ion-icon>
+          <ion-label (click)="abrirNotificacoes()" >
+            <h2>Notificações</h2>
+            <p>Minha central de notificações</p>
+          </ion-label>
+        </ion-item>
+      </div>
 
-    <div class="card-cinza">
-      <ion-item lines="none" routerLink="#">
-        <ion-icon name="wallet-outline" slot="start"></ion-icon>
-        <ion-label>
-          <h2>Pagamentos</h2>
-          <p>Valor gasto em cada coleta</p>
-        </ion-label>
-      </ion-item>
-    </div>
+      <div class="card-cinza">
+        <ion-item lines="none" routerLink="#">
+          <ion-icon name="person-outline" slot="start"></ion-icon>
+          <ion-label (click)="abrirDadosConta()">
+            <h2>Dados da conta</h2>
+            <p>Minhas informações da conta</p>
+          </ion-label>
+        </ion-item>
+      </div>
 
-    <div class="card-cinza">
-      <ion-item lines="none" routerLink="#">
-        <ion-icon name="heart-outline" slot="start"></ion-icon>
-        <ion-label>
-          <h2>Favoritos</h2>
-          <p>Seus prestadores mais fiéis</p>
-        </ion-label>
-      </ion-item>
-    </div>
+      <div class="card-cinza">
+        <ion-item lines="none" (click)="cliqueFuncaoDesabilitada()">
+          <ion-icon name="wallet-outline" slot="start"></ion-icon>
+          <ion-label>
+            <h2>Pagamentos</h2>
+            <p>Valor gasto em cada coleta</p>
+          </ion-label>
+        </ion-item>
+      </div>
 
-    <div class="card-cinza">
-      <ion-item lines="none" routerLink="#">
-        <ion-icon name="settings-outline" slot="start"></ion-icon>
-        <ion-label>
-          <h2>Configurações</h2>
-        </ion-label>
-      </ion-item>
+      <div class="card-cinza">
+        <ion-item lines="none" (click)="cliqueFuncaoDesabilitada()">
+          <ion-icon name="heart-outline" slot="start"></ion-icon>
+          <ion-label>
+            <h2>Favoritos</h2>
+            <p>Seus prestadores mais fiéis</p>
+          </ion-label>
+        </ion-item>
+      </div>
+
+      <div class="card-cinza">
+        <ion-item lines="none" (click)="cliqueFuncaoDesabilitada()">
+          <ion-icon name="settings-outline" slot="start"></ion-icon>
+          <ion-label>
+            <h2>Configurações</h2>
+          </ion-label>
+        </ion-item>
+      </div>
+
     </div>
+  </div>
 </ion-content>
 <app-footer-global></app-footer-global>
