--- a/src/app/perfil-cliente/perfil-cliente.page.scss
+++ b/src/app/perfil-cliente/perfil-cliente.page.scss
@@ -128,3 +128,27 @@ ion-content.no-scroll {
     background-color: #ddd;
     margin-bottom: 10px;
   }
+
+
+.contentBg {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: fixed;
+    overflow-y: auto;
+    float: left;
+    max-height: 450px;
+}
+
+.content {
+    max-width: 700px;
+    width: 100%;
+}
+
+@media (max-width: 600px) {
+  .content {
+    max-width: 900px;
+  }
+}
