--- a/src/app/solicitacao/solicitacao.page.scss
+++ b/src/app/solicitacao/solicitacao.page.scss
@@ -1,27 +1,25 @@
 /* ----------- GERAL ----------- */
-.bgd {
+.contentBg {
   background-color: rgb(233, 237, 237);
   background-image: url('/assets/imagens/fundo-arvores-removebg-preview.png');
   background-repeat: repeat-x;
   background-size: contain;
   background-position: center bottom;
   width: 100%;
-  min-height: 100vh;
-  position: relative;
-  padding: 10px 16px 16px 16px;
-  padding-bottom: 80px; /* espaço pro botão */
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: fixed;
+  overflow-y: auto;
+  float: left;
+  min-height: 450px;
 }
 
-.blur-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
+.content {
+  max-width: 700px;
   width: 100%;
-  height: 100%;
-  z-index: 0;
-  backdrop-filter: blur(0.5px);
-  -webkit-backdrop-filter: blur(0.2px);
-  background-color: rgba(255, 255, 255, 0.107);
+  margin-bottom: 30px;
 }
 
 .container > *:not(.blur-overlay) {
@@ -39,14 +37,21 @@ hr {
 /* ----------- SOLICITAÇÃO ----------- */
 .solicitacao-form {
   margin: 30px auto;
-  max-width: 350px;
-  width: 90%;
+  width: 100%;
+  background-color: #ffffff;
+  padding: 28px;
+  border-radius: 20px;
+  min-height: 1030px;
 }
 
 .solicitacao-form h6 {
-  margin: 15px 0 5px;
   font-weight: bold;
   color: #333;
+  margin: 26px 0 10px 0;
+}
+
+.solicitacao-form h6.titTopo{
+  margin: 0px 0 10px 0;
 }
 
 .solicitacao-form ion-select,
@@ -54,7 +59,7 @@ hr {
 .solicitacao-form textarea {
   width: 100%;
   padding: 8px 12px;
-  font-size: 4.5vw;
+  font-size: 20px;
   border: 1px solid #2f9e25;
   border-radius: 8px;
   box-sizing: border-box;
@@ -78,11 +83,15 @@ hr {
   font-weight: bold;
 }
 
+.solicitacao-form button.btnTopo {
+    margin: 10px 0 20px 0 !important;
+}
+
 /* ----------- AGENDAMENTO ----------- */
 .solicitacao-form ion-input[type="date"] {
   width: 100%;
   padding: 12px 16px;
-  font-size: 4.5vw;
+  font-size: 20px;
   border: 1px solid #2f9e25;
   border-radius: 8px;
   box-sizing: border-box;
@@ -93,7 +102,7 @@ hr {
 .solicitacao-form ion-input[type="time"] {
   width: 100%;
   padding: 12px 16px;
-  font-size: 4.5vw;
+  font-size: 20px;
   border: 1px solid #2f9e25;
   border-radius: 8px;
   box-sizing: border-box;
@@ -108,9 +117,13 @@ hr {
   border-radius: 20px;
   background-color: #0A4E23;
   color: white;
-  width: 70%;
+  width: 100%;
   text-align: center;
-  font-size: 4.5vw;
+  font-size: 20px;
+}
+
+button.btn-submit:disabled {
+  opacity: 0.5;
 }
 
 /* ----------- INPUT DE ARQUIVO ----------- */
@@ -125,7 +138,7 @@ hr {
   border-radius: 8px;
   background-color: #fff;
   color: #2f9e25;
-  font-size: 4.5vw;
+  font-size: 20px;
   cursor: pointer;
   text-align: center;
   font-weight: bold;
@@ -144,6 +157,14 @@ hr {
   box-shadow: 0 0 5px rgba(47, 158, 37, 0.7); /* Sombra ao focar */
 }
 
+
+@media (max-width: 600px) {
+  .content {
+    max-width: 900px;
+  }
+}
+
+
 /* ----------- RESPONSIVO PARA TELA PEQUENA ----------- */
 @media screen and (max-width: 768px) {
   .solicitacao-form {
@@ -159,16 +180,16 @@ hr {
   .solicitacao-form textarea,
   .solicitacao-form ion-input[type="date"],
   .solicitacao-form ion-input[type="time"] {
-    font-size: 4.5vw; /* Ajuste do tamanho da fonte para telas menores */
+    font-size: 20px; /* Ajuste do tamanho da fonte para telas menores */
   }
 
   .solicitacao-form .btn-submit {
-    font-size: 4.5vw;
-    width: 80%;
+    font-size: 20px;
+    width: 100%;
   }
 
   .solicitacao-form label.file-label {
-    font-size: 4.5vw;
+    font-size: 20px;
   }
 }
 
@@ -193,7 +214,7 @@ hr {
 
   .solicitacao-form .btn-submit {
     font-size: 5vw;
-    width: 90%;
+    width: 100%;
   }
 
   .solicitacao-form label.file-label {
