--- a/src/app/pagamento/pagamento.page.scss
+++ b/src/app/pagamento/pagamento.page.scss
@@ -1,3 +1,24 @@
+.contentBg {
+  background-image: url('/assets/imagens/fundo-arvores-removebg-preview.png'); 
+  background-repeat: repeat-x; 
+  background-size: contain; 
+  background-position: center bottom;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: fixed;
+  overflow-y: auto;
+  float: left;
+  min-height: 300px;
+}
+
+.content {
+  max-width: 700px;
+  width: 100%;
+}
+
 ion-content{
   --background: rgb(233, 237, 237);
   position: relative;
@@ -9,23 +30,17 @@ ion-title{
     cursor: pointer;
 }
 
-.content{
-    height: 100%;
-    display: flex;
+.content-padding {
+  padding: 16px;
 }
 
-.content-padding {
-    padding: 16px;
-  }
-
-  .bgd{
-    background-image: url('/assets/imagens/fundo-arvores-removebg-preview.png'); 
-    background-repeat: repeat-x; 
-    background-size: contain; 
-    background-position: center bottom;
-    width: 100%;
-    height: 100%;
-  }
+.bgd{
+  width: 100%;
+  min-height: 300px;
+  background-color: #ffffffed;
+  margin: 40px 0;
+  border-radius: 20px;
+}
 
 .botao-verde-claro,
 .botao-cinza {
@@ -41,12 +56,6 @@ p{
 
 .p-pagamento{
     margin-top: 35px;
-}
-
-.btn-pagar{
-    margin-top: 80px;
-    margin-left: 20px;
-    margin-right: 20px;
 }
 
 .botao-cinza {
@@ -84,4 +93,11 @@ button {
 
 button:hover {
   background-color: #0c612b;
+}
+
+
+@media (max-width: 600px) {
+  .content {
+    max-width: 900px;
+  }
 }
