--- a/src/app/pedido-cliente/pedido-cliente.page.html
+++ b/src/app/pedido-cliente/pedido-cliente.page.html
@@ -5,49 +5,51 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <div class="contentBg">
 
-  <div class="blurred-background"></div>
+      <div class="content" *ngIf="solicitacao">
 
-  <div class="content" *ngIf="solicitacao">
-
-    <ion-item>
-      <ion-label>
-        <h2>Pedido {{ solicitacao.id }} </h2>
-        <p>{{ nomeCliente }}</p>
-        <p>Dia: {{ solicitacao.desiredDate | date:'dd/MM/yyyy' }}</p>
-        <p>{{ solicitacao.desiredDate | date:'HH:mm' }}</p>
-      </ion-label>
-    </ion-item>
+        <ion-item>
+          <ion-label>
+            <h2>Pedido {{ solicitacao.id }} </h2>
+            <p>{{ nomeCliente }}</p>
+            <p>Dia: {{ solicitacao.desiredDate | date:'dd/MM/yyyy' }}</p>
+            <p>{{ solicitacao.desiredDate | date:'HH:mm' }}</p>
+          </ion-label>
+        </ion-item>
 
 
-    <ion-item button detail="true" class="itens-detalhes">
-      <ion-label>
-        <h3>Imagens dos resíduos</h3>
-      </ion-label>
-    </ion-item>
+        <ion-item>
+          <ion-label>
+            <h3>Imagens dos resíduos</h3>
+            <p>{{ solicitacao.image }}</p>
+          </ion-label>
+        </ion-item>
 
-    <ion-item button detail="true" class="itens-detalhes">
-      <ion-label>
-        <h3>Observações</h3>
-        <p>{{ solicitacao.description }}</p>
-      </ion-label>
-    </ion-item>
+        <ion-item>
+          <ion-label>
+            <h3>Observações</h3>
+            <p>{{ solicitacao.description }}</p>
+          </ion-label>
+        </ion-item>
 
-    <ion-item class="frase-impactante">
-      <ion-thumbnail slot="start">
-        <img alt="Silhouette of mountains" src="/assets/imagens/green_leaf_recycle_sign.jpg" />
-      </ion-thumbnail>
-      <ion-label>Lixo no lugar certo, o planeta agradece!</ion-label>
-    </ion-item>
+        <ion-item class="frase-impactante">
+          <ion-thumbnail slot="start">
+            <img alt="Silhouette of mountains" src="/assets/imagens/green_leaf_recycle_sign.jpg" />
+          </ion-thumbnail>
+          <ion-label>Lixo no lugar certo, o planeta agradece!</ion-label>
+        </ion-item>
 
-      <ion-card>
-        <ion-card-header>
-          <ion-card-title>Valor Total</ion-card-title>
-        </ion-card-header>
-        <ion-card-content>
-          <h2>R$ {{ solicitacao.suggestedValue | number: '1.2-2' }}</h2>
-        </ion-card-content>
-      </ion-card>
+          <ion-card>
+            <ion-card-header>
+              <ion-card-title>Valor Total</ion-card-title>
+            </ion-card-header>
+            <ion-card-content>
+              <h2>R$ {{ solicitacao.suggestedValue | number: '1.2-2' }}</h2>
+            </ion-card-content>
+          </ion-card>
+      </div>
+      <ion-spinner *ngIf="!solicitacao" name="crescent" style="display: block; margin: 50% auto;"></ion-spinner>
   </div>
-  <ion-spinner *ngIf="!solicitacao" name="crescent" style="display: block; margin: 50% auto;"></ion-spinner>
+
 </ion-content>
