--- a/src/app/pedido-cliente/pedido-cliente.page.scss
+++ b/src/app/pedido-cliente/pedido-cliente.page.scss
@@ -1,30 +1,32 @@
+
+.contentBg {
+  background-image: url('../../assets/imagens/fundo-arvores-removebg-preview.png');
+  background-repeat: repeat-x;
+  background-size: contain;
+  background-position: center bottom;
+  width: 100%;
+  height: 100%; /* Garante que a div content cubra todo o ion-content */
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Centraliza horizontalmente o conteúdo interno */
+  position: fixed;
+  overflow-y: auto;
+}
+
 ion-content {
   position: relative;
 }
 
 .content {
   position: relative;
-  background: #FFFFFF;
-  margin: 10px;
-  border-radius: 10px;
+  background: #ffffffbf;
   z-index: 2;
   padding: 16px;
-}
-
-.blurred-background {
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
-  height: 100%;
-  background-color: rgb(233, 237, 237);
-  background-image: url('/assets/imagens/fundo-arvores-removebg-preview.png');
-  background-repeat: repeat-x;
-  background-size: contain;
-  background-position: center bottom;
-  filter: blur(4px);
-  z-index: 1;
-  opacity: 1;
+  height: auto;
+  max-width: 700px;
+  margin: 40px 0;
+  border-radius: 20px;
 }
 
 .itens-detalhes{
