Incluido Imagem ao Pedido Prestador e Cliente

--- a/src/app/pedido-cliente/pedido-cliente.page.html
+++ b/src/app/pedido-cliente/pedido-cliente.page.html
@@ -22,7 +22,7 @@
         <ion-item>
           <ion-label>
             <h3>Imagens dos resíduos</h3>
-            <p>{{ solicitacao.image }}</p>
+            <img src="https://coletaverde.up.railway.app/media/{{ solicitacao.image }}" />
           </ion-label>
         </ion-item>
 
