--- a/src/app/pedido-prestador/pedido-prestador.page.html
+++ b/src/app/pedido-prestador/pedido-prestador.page.html
@@ -26,13 +26,14 @@
           </ion-label>
         </ion-item>
 
-        <ion-item button detail="true" class="itens-detalhes">
+        <ion-item>
           <ion-label>
             <h3>Imagens dos resíduos</h3>
+            <img src="https://coletaverde.up.railway.app/media/{{ solicitacao.image }}" />
           </ion-label>
         </ion-item>
 
-        <ion-item button detail="true" class="itens-detalhes">
+        <ion-item>
           <ion-label>
             <h3>Observações</h3>
             <p>{{ solicitacao.description }}</p>
