Adicionado Status ao Pedido Cliente

--- a/src/app/pedido-cliente/pedido-cliente.page.html
+++ b/src/app/pedido-cliente/pedido-cliente.page.html
@@ -15,6 +15,7 @@
             <p>{{ nomeCliente }}</p>
             <p>Dia: {{ solicitacao.desiredDate | date:'dd/MM/yyyy' }}</p>
             <p>{{ solicitacao.desiredDate | date:'HH:mm' }}</p>
+            <p>Status do Pedido: {{ getProgressText(solicitacao.progress) }}</p>
           </ion-label>
         </ion-item>
 
