--- a/src/app/dados-da-conta/dados-da-conta.page.scss
+++ b/src/app/dados-da-conta/dados-da-conta.page.scss
@@ -180,7 +180,12 @@ ion-content {
   .content {
     max-width: 900px;
   }
+
+  .contentBg{
+      max-height: 100%;
+  }
 }
+
 
 
 /* Responsividade */
