--- a/src/app/home-prestador/home-prestador.page.html
+++ b/src/app/home-prestador/home-prestador.page.html
@@ -21,7 +21,7 @@
 
       <div class="card-procurar-final-fixo card-cinza" (click)="irParaCardapio()">
         <ion-icon name="document-text-outline" class="icone-procurar-final-fixo verde-principal icone-propostas-maior"></ion-icon>
-        <ion-label class="texto-procurar-final-fixo verde-principal-texto texto-propostas-maior">ANALISAR PROPOSTAS</ion-label>
+        <ion-label class="texto-procurar-final-fixo verde-principal-texto texto-propostas-maior">ANALISAR COLETAS</ion-label>
       </div>
 
       <div class="card-metricas-final-fixo card-cinza">
