--- a/src/app/pedido-prestador/pedido-prestador.page.html
+++ b/src/app/pedido-prestador/pedido-prestador.page.html
@@ -16,6 +16,7 @@
             <p>{{ nomeCliente }}</p>
             <p>Dia: {{ solicitacao.desiredDate | date:'dd/MM/yyyy' }}</p>
             <p>{{ solicitacao.desiredDate | date:'HH:mm' }}</p>
+            <p>Status do Pedido: {{ getProgressText(solicitacao.progress) }}</p>
           </ion-label>
         </ion-item>
 
@@ -88,7 +89,7 @@
             <ion-button class="btn-aceitar" (click)="finalizarSolicitacao()">Finalizar</ion-button>
           </div>
 
-          <div class="botoes-finais" *ngIf="solicitacao?.progress !== 'inProgress'">
+          <div class="botoes-finais" *ngIf="solicitacao?.progress === 'waiting'">
             <ion-button class="btn-negociar" (click)="cliqueFuncaoDesabilitada()">Negociar</ion-button>
             <ion-button class="btn-aceitar" (click)="aceitarSolicitacao()">Aceitar</ion-button>
           </div>
