--- a/src/app/cardapio/cardapio.page.scss
+++ b/src/app/cardapio/cardapio.page.scss
@@ -11,6 +11,7 @@ body {
 .header-container {
   position: relative;
   min-height: 200px;
+  max-height: 200px;
   top: 0;
   left: 0;
   width: 100%;
@@ -89,6 +90,7 @@ body {
 .contentCardapio {
   max-width: 900px;
   margin: 40px auto;
+  padding-bottom: 110px;
 }
 
 .inicioCardapio {
@@ -125,7 +127,7 @@ body {
   flex: 1;
   padding-right: 20px;
   font-weight: 600;
-  font-size: 18px;
+  font-size: 16px;
 }
 
 .blocoInfosEsq span {
@@ -136,7 +138,7 @@ body {
 
 .blocoInfosPreco {
   color: #555555;
-  font-size: 28px;
+  font-size: 24px;
   font-weight: 700;
   text-align: right;
   white-space: nowrap;
@@ -212,6 +214,10 @@ body {
 @media (max-width: 600px) {
   .content {
     max-width: 900px;
+  }
+
+  .contentBg{
+      max-height: 100%;
   }
 }
 
