--- a/src/app/notificacoes/notificacoes.page.scss
+++ b/src/app/notificacoes/notificacoes.page.scss
@@ -4,15 +4,17 @@ ion-content {
 }
 
 .content {
-  background-image: url('/assets/imagens/fundo-arvores-removebg-preview.png');
+  background-image: url('../../assets/imagens/fundo-arvores-removebg-preview.png');
   background-repeat: repeat-x;
   background-size: contain;
   background-position: center bottom;
   width: 100%;
   height: 100%;
-  justify-content: center;
   display: flex;
-  padding: 40px 0;
+  flex-direction: column;
+  align-items: center;
+  position: fixed;
+  overflow-y: auto;
 }
 
 .content ion-text {
@@ -26,10 +28,22 @@ ion-content {
 }
 
 .contentBg {
-  max-width: 700px;
   width: 100%;
+  height: auto;
+  max-width: 700px;
+  padding-bottom: 140px;
+  margin: 40px 0;
 }
 
 .contentBg ion-item{
   cursor: pointer;
+}
+
+
+@media (max-width: 600px) {
+
+  .contentBg{
+      max-height: 100%;
+  }
+
 }
