--- a/src/app/pedidos-prestador/pedidos-prestador.page.scss
+++ b/src/app/pedidos-prestador/pedidos-prestador.page.scss
@@ -19,8 +19,9 @@ ion-content{
 
 .content{
     width: 100%;
-    height: 100%;
+    height: auto;
     max-width: 700px;
+    padding-bottom: 140px;
 }
 
 // <card>
@@ -127,3 +128,12 @@ display: flex;
 justify-content: center;
 }
 // </botões>
+
+
+@media (max-width: 600px) {
+
+  .contentBg{
+      max-height: 100%;
+  }
+
+}
