--- a/src/app/pedidos-cliente/pedidos-cliente.page.scss
+++ b/src/app/pedidos-cliente/pedidos-cliente.page.scss
@@ -19,8 +19,9 @@ ion-content{
 
 .content{
     width: 100%;
-    height: 100%;
+    height: auto;
     max-width: 700px;
+    padding-bottom: 150px;
 }
 
 // <card>
