--- a/src/app/notificacoes/notificacoes.page.scss
+++ b/src/app/notificacoes/notificacoes.page.scss
@@ -1,12 +1,12 @@
-<<<<<<< HEAD
 notificacao-card {
   margin: 10px;
   border-left: 5px solid #4caf50;
-=======
+}
+
 .notificacao-card {
   margin: 10px;
   border-left: 5px solid #0a4e23;
->>>>>>> 3a5dd011de4beb4d8295d659e6f5bf50f9f6e449
+
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
   background-color: #ffffff;
   transition: transform 0.2s ease;
